--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,18 +1,24 @@
-.card {
-  width: 250px;
-  height: 150px;
-  cursor: pointer;
-}
 
 .card-inner {
   background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
-  border-radius: 15px;
+  border-radius: var(--aef-border-radius-large);
   color: #fff;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 150px;
   padding: 10px 15px;
-  width: 100%;
+  width: 250px;
+}
+
+.card {
+  cursor: pointer;
+  padding: 10px;
+  text-align: left;
+
+  &.selected {
+    border: 1px solid #ff2c7d;
+    border-radius: var(--aef-border-radius-large);
+  }
 }
 
 .row {
