✨ Change logic to manage multiple cards on transactions get

--- a/src/app/components/bank-account/bank-account.component.html
+++ b/src/app/components/bank-account/bank-account.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <aef-bank-accounts-slider (bankAccountSelectedChange)="changeBankAccountSelected($event)" />
+  <aef-bank-accounts-slider (bankAccountSelectedChange)="changeBankAccountSelected($event)"
+                            [bankAccountSelected]="bankAccountSelected()" />
 
   <div class="card-title-container">
     <h2 class="title">Carte collegate al conto</h2>
