--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,6 +1,5 @@
-
 .card-inner {
-  background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+  background-image: linear-gradient(45deg, #555, #aaa);
   border-radius: var(--aef-border-radius-large);
   color: #fff;
   display: flex;
@@ -16,8 +15,23 @@
   text-align: left;
 
   &.selected {
-    border: 1px solid #ff2c7d;
-    border-radius: var(--aef-border-radius-large);
+    .card-inner {
+      background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+    }
+
+    .description-label {
+      font-weight: bold;
+    }
+  }
+
+  &:hover {
+    .card-inner {
+      background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+    }
+
+    .description-label {
+      font-weight: bold;
+    }
   }
 }
 
