--- a/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
+++ b/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="first-line">
       <aef-bank-account-select [formControlName]="'bankAccount'"
-                               inputId="bankAccount"
-                               label="Seleziona il conto corrente" />
+                               label="Seleziona il conto corrente"
+                               selectId="bankAccount" />
 
       <aef-input-label inputId="beneficiary" label="Beneficiario">
         <p-inputgroup>
