--- a/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
+++ b/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="first-line">
       <aef-bank-account-select [formControlName]="'originBankAccount'"
-                               inputId="originBankAccount"
-                               label="Seleziona il conto corrente di origine" />
+                               label="Seleziona il conto corrente di origine"
+                               selectId="originBankAccount" />
       <aef-bank-account-select [formControlName]="'destinationBankAccount'"
-                               inputId="destinationBankAccount"
-                               label="Seleziona il conto corrente di destinazione" />
+                               label="Seleziona il conto corrente di destinazione"
+                               selectId="destinationBankAccount" />
     </div>
     <div class="second-line">
       <div class="description-container">
