✅ Add tests on all operations components

--- a/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
+++ b/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
@@ -34,7 +34,9 @@
       </aef-input-label>
     </div>
     <div class="button-container">
-      <p-button [disabled]="!bankTransferForm.valid" severity="primary" type="submit">Inserisci bonifico</p-button>
+      <p-button [attr.data-testid]="'btn-submit-bank-transfer'" [disabled]="!bankTransferForm.valid" severity="primary"
+                type="submit">Inserisci bonifico
+      </p-button>
     </div>
   </div>
 </form>
