--- a/src/app/components/operations/new-operation/success-dialog/success-dialog.component.html
+++ b/src/app/components/operations/new-operation/success-dialog/success-dialog.component.html
@@ -2,7 +2,9 @@
           [style]="{ width: '25rem' }">
   <span class="p-text-secondary block mb-8">{{ bodyText() }}</span>
   <div class="flex justify-end gap-2">
-    <p-button (click)="goToOperationList()" label="Lista operazioni" severity="secondary" />
-    <p-button (click)="newOperationClicked.emit()" [label]="primaryButtonText()" />
+    <p-button (onClick)="goToOperationList()" [attr.data-testid]="'btn-go-to-operation-list'" label="Lista operazioni"
+              severity="secondary" />
+    <p-button (onClick)="newOperationClicked.emit()" [attr.data-testid]="'btn-new-operation'"
+              [label]="primaryButtonText()" />
   </div>
 </p-dialog>
