--- a/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
+++ b/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
@@ -29,11 +29,13 @@
   </div>
 </form>
 
-<aef-success-dialog (newOperationClicked)="newOperation()"
+<aef-success-dialog (primaryButtonClicked)="newOperation()"
+                    (secondaryButtonClicked)="goToOperationList()"
                     [(dialogVisible)]="successDialogVisible"
                     bodyText="Vuoi inserire un nuovo giroconto o tornare alla schermata dell'elenco delle operazioni?"
                     headerText="Giroconto inserito con successo!"
                     primaryButtonText="Nuovo giroconto"
+                    secondaryButtonText="Lista delle operazioni"
 />
 
 
