--- a/src/app/components/success-dialog/success-dialog.component.html
+++ b/src/app/components/success-dialog/success-dialog.component.html
@@ -2,9 +2,10 @@
           [style]="{ width: '25rem' }">
   <span class="p-text-secondary block mb-8">{{ bodyText() }}</span>
   <div class="flex justify-end gap-2">
-    <p-button (onClick)="goToOperationList()" [attr.data-testid]="'btn-go-to-operation-list'" label="Lista operazioni"
+    <p-button (onClick)="secondaryButtonClicked.emit()" [attr.data-testid]="'btn-secondary'"
+              [label]="secondaryButtonText()"
               severity="secondary" />
-    <p-button (onClick)="newOperationClicked.emit()" [attr.data-testid]="'btn-new-operation'"
+    <p-button (onClick)="primaryButtonClicked.emit()" [attr.data-testid]="'btn-primary'"
               [label]="primaryButtonText()" />
   </div>
 </p-dialog>
